--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: WHSacc
 Type: Package
-Title: What the Package Does (Title Case)
+Title: R Package to automatically process WHS files with GGIR
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Jairo Hidalgo Migueles
+Maintainer: Jairo Hidalgo Migueles <jairo.hidalgo.migueles@gmail.com>
+Description: This package has been specifically written to process the Women's Health Study accelerometer files using GGIR.
+License: LGPL (>= 3)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
+Roxygen: list(markdown = TRUE)
